# Talos

./: .gitignore  README.md  install.sh  pyproject.toml
docs/superpowers/notes/: 2026-06-01-hermes-skill-debug-handoff.md
docs/superpowers/plans/: 2026-05-30-daily-loop-core.md  2026-05-30-foundation-and-paper-digest.md  2026-06-01-focus-buddy-closeloop.md  2026-06-01-loops-and-focus.md
docs/superpowers/specs/: 2026-05-29-hermes-科研搭子-design.md
pack/: SOUL.snippet.md  prefs.example.yaml
pack/cron/: jobs.snippet.json
pack/skills/research/arxiv-digest/: SKILL.md
pack/skills/research/evening-review/: SKILL.md
pack/skills/research/focus-buddy/: SKILL.md
pack/skills/research/morning-plan/: SKILL.md
pack/skills/research/open-loop-tracker/: SKILL.md
pack/skills/research/paper-library/: SKILL.md
pack/skills/research/paper-reader/: SKILL.md
pack/skills/research/time-block/: SKILL.md
pack/skills/research/weekly-report/: SKILL.md
pack/skills/work/draft-reply/: SKILL.md
pack/skills/work/meeting-to-actions/: SKILL.md
pack/skills/work/project-review/: SKILL.md
src/research_assistant/: arxiv.py  cli.py  config.py  daily.py  focus.py  state.py
tests/: test_arxiv.py  test_cli.py  test_config.py  test_daily.py  test_focus.py  test_state.py
tests/fixtures/: arxiv_sample.xml
