[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-assistant"
version = "0.1.0"
description = "Hermes 科研搭子 — 基础设施与论文日报"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "feedparser>=6.0",
    "PyYAML>=6.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
research-assistant = "research_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
